# mbta-tracker

./: app.py  pyproject.toml
data/: spider.csv  station-network.csv
data/clean/: links.csv  station_coordinates.csv  stations.csv
mbta-tracker/scripts/: calculate_station_coordinates.py
mbta_tracker/: gtfs_realtime.py  line.py  plotter.py  station.py  system.py
mbta_tracker/scripts/: 1_clean_station_information.py  2_clean_links.py  3_clean_stop_codes_station_id_crosswalk.py  clean_links.py  clean_station_information.py
